# eom

./: .gitignore  LICENSE  README.md  pyproject.toml
bench/: inbound.py
data/bench/: qsets.json
data/eval/: prompted_baseline.csv
data/gold/: MANIFEST.json
data/raw/: MANIFEST.json
data/synthetic/: log.jsonl  quality_report_final.json  quality_report_first_batch.json  quality_report_scaffolded.json  scaffolding_ab_results.md  scaffolding_postproc_ab.md  (+1 more)
data/train/: sft.jsonl  (+5 more)
demo/: README.md  app.py  requirements.txt
docs/: KAGGLE-WRITEUP.md  SPEC-v0.2.md  SUBMIT-CHECKLIST.md  VIDEO-SCRIPT.md
eom/: __init__.py  cli.py  harness.py  normalise.py  repair.py  schema.py  tokens.py
notebooks/: 01-explore-gold.ipynb  02-prompted-baseline.ipynb  03-train-sft.ipynb
scripts/: eval_generations.py  fetch_raw_pool.py  generate_synthetic.py  measure_prompted_baseline.py  modal_eval_gemma4_v5.py  modal_smoke_unsloth.py  modal_train_gemma4.py  modal_train_gemma4_v2.py  modal_train_gemma4_v3.py  modal_train_gemma4_v4.py  modal_train_gemma4_v5.py  modal_train_sft.py  prepare_sft_dataset.py  scaffold_gold.py  validate_gold.py
templates/: newspaper.css  newspaper.html
tests/: test_cli.py  test_compiler_base.py  test_compiler_prompted.py  test_compiler_rules.py  test_e2e.py  test_fixtures.py  test_harness.py  test_llm_client.py  test_normalise.py  test_renderer_context_pack.py  test_renderer_newspaper.py  test_repair.py  test_scaffolding.py  test_schema.py  test_tokens.py
web/: .gitignore  bun.lockb  package.json  schema.sql  seed.sql  tsconfig.json  wrangler.jsonc
(+296 files in other folders)
