[project]
name = "eom"
version = "0.1.0"
description = "Editorial Object Model — an attention-architecture standard for human-AI documents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "soh"}]
dependencies = [
    "pydantic>=2.5",
    "markdown-it-py>=3.0",
    "jinja2>=3.1",
    "tiktoken>=0.7",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
ml = [
    "spacy>=3.7",
    "torch>=2.3",
    "transformers>=4.45",
    "datasets>=2.20",
]
train = [
    "unsloth",
    "trl>=0.10",
    "peft>=0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "beautifulsoup4>=4.12",
    "jupyter>=1.0",
    "nbconvert>=7.0",
]

[project.scripts]
eom = "eom.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eom"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
